set(testKeyPtrMapper_SOURCES testKeyPtrMapper.C)
add_executable(testKeyPtrMapper ${testKeyPtrMapper_SOURCES})

set(testTwoWayMapping_SOURCES testTwoWayMapping.C)
add_executable(testTwoWayMapping ${testTwoWayMapping_SOURCES})

set(testLink_SOURCES testLink.C)
add_executable(testLink ${testLink_SOURCES})


